

2011-December-31 Struan Robertson

	* MESMER manual.doc: Documentation update.  

2011-December-30 Struan Robertson

	* MESMER manual.doc: Documentation update.  

2011-December-20 Struan Robertson

	* ExponentialDown.cpp: Altered to allow the "exponent" variable of 
	<DeltaE>d	to be treated as a parameter.  

2011-December-19 Struan Robertson

	* CollisionOperator.cpp: Tidying-up of time evolution method.  

2011-December-16 Chris Morley

	* src/CollisionOperator.cpp,src/CollisionOperator.h,
	src/System.cpp: Some XML output grain profile

2011-December-10 Struan Robertson

	* CollisionOperator.cpp: Initial implementation of species profile 
	method.  

2011-December-04 Struan Robertson

	* CollisionOperator.cpp/.h and System.cpp: Refactoring of timeEvolution
	method in preparation for species profile implementation.  

2011-November-20 Struan Robertson

	* Minor changes to Examples and documentation.  

2011-November-06 Struan Robertson

	* MolecularComponents.cpp/.h and DOS plugin classes: General 
	tidying up.
	* main.cpp: Banner method added.  

2011-November-06 Struan Robertson

	* MolecularComponents.cpp/.h, Molecule.cpp/.h and all DOS plugin 
	classes: Add methods to allow the calculation of the number of 
	degrees of freedom.  

2011-October-30 Struan Robertson

	* MolecularComponents.cpp/.h, Molecule.cpp/.h: Tidying up of some 
	accessor methods and the gDensityOfStates constructor.  

2011-October-08 Struan Robertson

	* Initial revision of thermodynamic table smoke test.  

2011-September-10 Chris Morley

	* src/MolecularComponents.cpp,src/MolecularComponents.h,
	src/plugins/ExponentialDown.cpp,src/plugins/MesmerILT.cpp,
	src/plugins/SimpleILT.cpp: Make the names of the range variables,
	which are displayed during fitting, include the name of the molecule
	or the reaction. Fixes bug #3406422.

2011-September-08 Chris Morley
	* Documentation\Adding a molecule to the library.html: minor update
	
2011-August-18 Struan Robertson
