@@ -27,6 +27,9 @@
   <property dictRef="me:deltaEDown" default="NEEDS TO BE CHECKED**">
     <scalar>130.0</scalar>
   </property>
+  <property dictRef="me:deltaEDownTExponent" default="true">
+    <scalar referenceTemperature="298">1.0</scalar>
+  </property>
   <molecule spinMultiplicity="1" default="true"/>
   <molecule me:type="deficientReactant excessReactant modelled transitionState sink"
             default="IS UNSATISFACTORY. CHOOSE ONE FROM LIST**"></molecule>
